--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# Testing And Example
+example
+
 # dependencies
 node_modules
 
